deployment/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webhook-kube-auto-deploy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: webhook-kube-auto-deploy
  template:
    metadata:
      labels:
        app: webhook-kube-auto-deploy
    spec:
      serviceAccountName: webhook-kube-auto-deploy # Specifies the service account for the pod.
      containers:
      - name: webhook-kube-auto-deploy
        image: ghcr.io/uib-ub/uib-ub/hono-kube-deploy-automation:latest
        imagePullPolicy: Always
        ports:
        - name: http-port
          containerPort: 8080
        securityContext:
          privileged: false # Required for Docker-in-Docker unless using socket mounting
          readOnlyRootFilesystem: false # Set to true if your app does not need to write to the filesystem
        resources:
          requests:
            memory: "1Gi"
            cpu: "1"
          limits:
            memory: "2Gi"
            cpu: "2"
        volumeMounts:
        - name: docker-sock
          mountPath: /var/run/docker.sock
        livenessProbe:
          httpGet:
            path: /health
            port: 8080
          initialDelaySeconds: 60
          timeoutSeconds: 5
          periodSeconds: 30
          failureThreshold: 5
        readinessProbe:
          httpGet:
            path: /ready
            port: 8080
          initialDelaySeconds: 20
          timeoutSeconds: 5
          periodSeconds: 10
          failureThreshold: 5
      imagePullSecrets:
      - name: github-deploy-regcred # Refers to a secret (github-deploy-regcred) to authenticate with the container registry for pulling images.
      volumes:
      - name: docker-sock
        hostPath:
          path: /var/run/docker.sock
          type: Socket
---
apiVersion: v1
kind: Service
metadata:
  name: webhook-kube-auto-deploy
spec:
  type: ClusterIP
  ports:
  - name: webhook-kube-auto-deploy-http
    port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    app: webhook-kube-auto-deploy
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-git-deploy-ingress
  annotations:
    cert-manager.io/cluster-issuer: lets-encrypt
    # nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  tls:
  - hosts:
    - api-git-deploy.testdu.uib.no
    secretName: api-git-deploy-ingress-tls
  rules:
  - host: api-git-deploy.testdu.uib.no
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: webhook-kube-auto-deploy
            port:
              number: 80
